update notebook after recent changes in lib

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Last verified run: **2025-Jan-03**"
+    "Last verified run: **2025-Jan-07**"
    ]
   },
   {
@@ -65,7 +65,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,14 +75,18 @@
     "\n",
     "<center>\n",
     "    <img src=\"images/ScreenshotNewProductButton.png\"> \n",
-    "</center>\n",
-    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "and fill in the Upload Form with relevant metadata. \n",
     "\n",
     "<center>\n",
     "    <img src=\"images/ScreenshotUploadForm.png\" > \n",
-    "</center>\n",
-    "\n"
+    "</center>"
    ]
   },
   {
@@ -211,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('token.txt', 'r') as file:\n",
+    "with open('local_token.txt', 'r') as file:\n",
     "    token = file.read()\n",
     "#pz_server = PzServer(token=token, host=\"pz\")\n",
     "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host during the test phase  "
@@ -314,7 +317,7 @@
    },
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"release\": \"LSST DP0.2\", \n",
+    "pz_server.display_products_list(filters={\"release\": \"DP0.2\", \n",
     "                                 \"product_type\": \"Training Set\"})"
    ]
   },
@@ -900,9 +903,8 @@
     "\n",
     "On the PZ Server website, go to **PZ Server Pipelines** > **Combine Spec-z Catalogs**, fill in the submission form with relevant metadata, such as the name for the new spec-z catalog to be created and a short description, select the catalogs to include by marking at least two checkboxes, and press the **Run** button. \n",
     "\n",
-    "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
-    "<img src=\"./images/ScreenshotCSC.png\"  width=600/> \n"
+    "<img src=\"./images/ScreenshotCSC.png\"  width=800/> \n"
    ]
   },
   {
@@ -1184,7 +1186,7 @@
    },
    "outputs": [],
    "source": [
-    "my_new_specz_catalog.data.plot(x=\"ra_specz\", y=\"dec_specz\", kind=\"scatter\")  \n",
+    "my_new_specz_catalog.data.plot(x=\"ra\", y=\"dec\", kind=\"scatter\")  \n",
     "plt.xlabel(\"R.A. (degrees)\")\n",
     "plt.ylabel(\"Dec. (degrees)\")"
    ]
@@ -1202,7 +1204,6 @@
     "\n",
     "For this pipeline, the number of inputs is fixed to two: one spec-z catalog and one LSST Object catalog (identified by the LSST data release tag). \n",
     "\n",
-    "<font color=red>TO DO: UPDATE SCREENSHOT HERE</font>\n",
     "\n",
     "<img src=\"./images/ScreenshotTSM.png\" /> "
    ]
@@ -1222,7 +1223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm = pz_server.make_training_set(\"tsm example\")                          "
+    "tsm = pz_server.training_set_maker(\"tsm example\")                          "
    ]
   },
   {
@@ -1249,6 +1250,15 @@
    "outputs": [],
    "source": [
     "tsm.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.display_releases()"
    ]
   },
   {
@@ -1288,13 +1298,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the cross-matching configuration parameters to be used by LSDB. \n",
+    "Set the configuration parameters `dict`: \n",
+    "\n",
+    "* The dictionary \"cross-matching\" refers to the LSDB configuration parameters `{'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}`; \n",
+    "* In addition, there is an extra parameter to define what to do when there are multiple matches for the same spectroscopic object, keep all matches or only the closest one (default). \n",
+    "to be used by LSDB. \n",
     "\n",
     "```python\n",
     "tsm.set_config(                                             \n",
-    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0}, 'duplicate_criteria': 'closest', 'suffixes': ['','']}, 'duplicate_criteria': 'closest'}\n",
-    "\n",
-    "    \n",
+    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}, 'duplicate_criteria': 'closest'}    \n",
     ")    \n",
     "```\n",
     "\n"
@@ -1306,7 +1318,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tsm.set_config({\"n_neighbors\": 1, \"radius_arcsec\": 1.0}) "
+    "tsm.set_config({'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}, \n",
+    "                'duplicate_criteria': 'closest'}\n",
+    "              ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsm.summary()"
    ]
   },
   {
@@ -1324,7 +1347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm.run_and_wait()"
+    "pz_server.run_and_wait(tsm)"
    ]
   },
   {
@@ -1419,9 +1442,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "lsst"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1433,7 +1456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.0"
   },
   "nbsphinx": {
    "execute": "never"
