update screenshots and apply grammarly fixes

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('local_token.txt', 'r') as file:\n",
+    "with open('token.txt', 'r') as file:\n",
     "    token = file.read()\n",
     "#pz_server = PzServer(token=token, host=\"pz\")\n",
     "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host during the test phase  "
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It also works if we type a string pattern that is part of the value. For instance, just \"DP0\" instead of \"LSST DP0.2\": "
+    "It also works if we type a string pattern that is part of the value. For instance, just \"DP0\" instead of \"DP0.2\": "
    ]
   },
   {
@@ -904,7 +904,7 @@
     "On the PZ Server website, go to **PZ Server Pipelines** > **Combine Spec-z Catalogs**, fill in the submission form with relevant metadata, such as the name for the new spec-z catalog to be created and a short description, select the catalogs to include by marking at least two checkboxes, and press the **Run** button. \n",
     "\n",
     "\n",
-    "<img src=\"./images/ScreenshotCSC.png\"  width=800/> \n"
+    "<img src=\"./images/ScreenshotCSC.png\"  width=600 /> \n"
    ]
   },
   {
@@ -1197,7 +1197,7 @@
    "source": [
     "### Training Set Maker \n",
     "\n",
-    "Now, let's add photometric data to our spectroscopic catalog to make a training set. On the PZ Server website, go to PZ Server Pipelines > Training Set Maker, fill in the submission form with relevant metadata, such as the name for the new training set to be created and a short description, select the input data and configuration parameters, and press the Run button. \n",
+    "Let's add photometric data to our spectroscopic catalog to make a training set. On the PZ Server website, go to PZ Server Pipelines > Training Set Maker, fill in the submission form with relevant metadata, such as the name for the new training set to be created and a short description, select the input data and configuration parameters, and press the Run button. \n",
     "\n",
     "The configuration parameters are inherited from LSDB. For more information, please check the [LSDB documentation website](https://docs.lsdb.io/en/stable/).  \n",
     "\n",
@@ -1205,14 +1205,14 @@
     "For this pipeline, the number of inputs is fixed to two: one spec-z catalog and one LSST Object catalog (identified by the LSST data release tag). \n",
     "\n",
     "\n",
-    "<img src=\"./images/ScreenshotTSM.png\" /> "
+    "<img src=\"./images/ScreenshotTSM.png\" width=600 /> "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, the pipeline can be submitted using the method `pz_server.make_training_set` from the `pzserver` library.\n",
+    "Alternatively, the pipeline can be submitted using the `pz_server.make_training_set` method from the `pzserver` library.\n",
     "\n",
     "While waiting for the first LSST Object catalog with observed data becoming available, let's see how the *Training Set Maker* works with simulated data from DP0.2. Again, let's instantiate an object for the process, a \"tsm\" object, giving a name (string) for the new training set to be created. "
    ]
@@ -1301,7 +1301,7 @@
     "Set the configuration parameters `dict`: \n",
     "\n",
     "* The dictionary \"cross-matching\" refers to the LSDB configuration parameters `{'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}`; \n",
-    "* In addition, there is an extra parameter to define what to do when there are multiple matches for the same spectroscopic object, keep all matches or only the closest one (default). \n",
+    "* In addition, there is an extra parameter to define what to do when there are multiple matches for the same spectroscopic object: keep all matches or keep only the closest one (default). \n",
     "to be used by LSDB. \n",
     "\n",
     "```python\n",
@@ -1442,9 +1442,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "LSST",
    "language": "python",
-   "name": "python3"
+   "name": "lsst"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1456,7 +1456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.9"
   },
   "nbsphinx": {
    "execute": "never"
