--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install pzserver"
+    "! pip install pzserver==0.2.7"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pz_server = PzServer(token=\"<your token>\", host=\"pz-dev\") "
+    "pz_server = PzServer(token=\"1c0ea52fbefb19fb147010c159702951cccd4af4\", host=\"pz-dev\") "
    ]
   },
   {
@@ -214,10 +214,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('token.txt', 'r') as file:\n",
-    "    token = file.read()\n",
-    "#pz_server = PzServer(token=token, host=\"pz\")\n",
-    "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host during the test phase  "
+    "#with open('token.txt', 'r') as file:\n",
+    "#    token = file.read()\n",
+    "#pz_server = PzServer(token=token, host='pz-dev') # 'pz-dev' is the temporary host during the test phase, then it will be just 'pz'  "
    ]
   },
   {
@@ -245,24 +244,6 @@
    "outputs": [],
    "source": [
     "pz_server.display_product_types()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "display the list of users who uploaded data products to the server, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "pz_server.display_users()"
    ]
   },
   {
@@ -1181,9 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "my_new_specz_catalog.data.plot(x=\"ra\", y=\"dec\", kind=\"scatter\")  \n",
@@ -1223,7 +1202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm = pz_server.training_set_maker(\"tsm example\")                          "
+    "tsm = pz_server.training_set_maker(\"tsm example 2\")                          "
    ]
   },
   {
@@ -1306,10 +1285,9 @@
     "\n",
     "```python\n",
     "tsm.set_config(                                             \n",
-    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}, 'duplicate_criteria': 'closest'}    \n",
+    "{'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['_specz','']}, 'duplicate_criteria': 'closest'}    \n",
     ")    \n",
-    "```\n",
-    "\n"
+    "```"
    ]
   },
   {
@@ -1318,9 +1296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm.set_config({'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['','']}, \n",
-    "                'duplicate_criteria': 'closest'}\n",
-    "              ) "
+    "#tsm.set_config({'crossmatch': {'n_neighbors': 1, 'radius_arcsec': 1.0, 'suffixes': ['_specz','']}, 'duplicate_criteria': 'closest'}) "
    ]
   },
   {
@@ -1406,14 +1382,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "my_new_training_set.data.plot(x=\"ra_specz\", y=\"dec_specz\", kind=\"scatter\")  \n",
+    "my_new_training_set.data.plot(x=\"coord_ra\", y=\"coord_dec\", kind=\"scatter\")  \n",
     "plt.xlabel(\"R.A. (degrees)\")\n",
-    "plt.ylabel(\"Dec. (degrees)\")"
+    "plt.ylabel(\"Dec. (degrees)\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -1422,7 +1397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_new_training_set.data.hist('Z')\n",
+    "my_new_training_set.data.hist('z_specz')\n",
     "plt.xlabel(\"spec-z\")\n",
     "plt.ylabel(\"counts\")\n",
     "plt.title(None)"
