--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install pzserver==0.2.7"
+    "! pip install pzserver"
    ]
   },
   {
@@ -190,11 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-08T15:05:56.967021Z",
+     "iopub.status.busy": "2025-01-08T15:05:56.966109Z",
+     "iopub.status.idle": "2025-01-08T15:05:56.970327Z",
+     "shell.execute_reply": "2025-01-08T15:05:56.969639Z",
+     "shell.execute_reply.started": "2025-01-08T15:05:56.966975Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "pz_server = PzServer(token=\"1c0ea52fbefb19fb147010c159702951cccd4af4\", host=\"pz-dev\") "
+    "#pz_server = PzServer(token=\"<your token here>\", host=\"pz-dev\") "
    ]
   },
   {
@@ -956,7 +964,7 @@
    },
    "outputs": [],
    "source": [
-    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\"})"
+    "pz_server.display_products_list(filters={\"product_type\": \"Spec-z Catalog\", 'uploaded_by':'gschwend'})"
    ]
   },
   {
@@ -1167,7 +1175,8 @@
    "source": [
     "my_new_specz_catalog.data.plot(x=\"ra\", y=\"dec\", kind=\"scatter\")  \n",
     "plt.xlabel(\"R.A. (degrees)\")\n",
-    "plt.ylabel(\"Dec. (degrees)\")"
+    "plt.ylabel(\"Dec. (degrees)\")\n",
+    "plt.tigh_layout()"
    ]
   },
   {
@@ -1202,7 +1211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm = pz_server.training_set_maker(\"tsm example 2\")                          "
+    "tsm = pz_server.training_set_maker(\"tsm example\")                          "
    ]
   },
   {
@@ -1400,7 +1409,21 @@
     "my_new_training_set.data.hist('z_specz')\n",
     "plt.xlabel(\"spec-z\")\n",
     "plt.ylabel(\"counts\")\n",
-    "plt.title(None)"
+    "plt.title(None)\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_new_training_set.data.hist('mag_i')\n",
+    "plt.xlabel(\"i-band magnitude\")\n",
+    "plt.ylabel(\"counts\")\n",
+    "plt.title(None)\n",
+    "plt.tight_layout()"
    ]
   },
   {
