--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -190,16 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-01-08T15:05:56.967021Z",
-     "iopub.status.busy": "2025-01-08T15:05:56.966109Z",
-     "iopub.status.idle": "2025-01-08T15:05:56.970327Z",
-     "shell.execute_reply": "2025-01-08T15:05:56.969639Z",
-     "shell.execute_reply.started": "2025-01-08T15:05:56.966975Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#pz_server = PzServer(token=\"<your token here>\", host=\"pz-dev\") "
@@ -371,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to upload a data product to via Python API (alternative method)  "
+    "### How to upload a data product to PZ Server via Python API (alternative method)"
    ]
   },
   {
@@ -395,6 +387,7 @@
     "    \"release\": None, # LSST release, use None if not LSST data \n",
     "    \"main_file\": \"upload_example.csv\", # full path \n",
     "    \"auxiliary_files\": [\"upload_example.html\", \"upload_example.ipynb\"] # full path\n",
+    "    #\"auxiliary_files\": [] # you must give a empty list if you don't have any auxiliary_files\n",
     "}"
    ]
   },
@@ -415,6 +408,60 @@
    "source": [
     "product_id = upload.product_id\n",
     "product_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After an upload object is created, you can also add auxiliary files before saving."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.add_auxiliary_file(\"upload_example.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To save your product in PZ Server, you must give the columns names of your data. For a specz catalog, for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = {\n",
+    "    \"<your-RA-column-name>\": \"RA\",\n",
+    "    \"<your-Dec-column-name>\": \"Dec\",\n",
+    "    \"<your-z-column-name>\": \"z\"\n",
+    "}\n",
+    "\n",
+    "upload.make_columns_association(columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you can finally save it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.save()"
    ]
   },
   {
@@ -1443,9 +1490,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "test",
    "language": "python",
-   "name": "lsst"
+   "name": "test"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1457,7 +1504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.0"
   },
   "nbsphinx": {
    "execute": "never"
