Adding instructions to remove file and delete product

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -586,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To delete a single file of the product, you must give the file id to the ```delete_file``` method. Be careful, it is the file id, not the product id."
+    "To delete a single file of the product, you must give the file id to the ```remove_file``` method. Be careful, it is the file id, not the product id."
    ]
   },
   {
@@ -595,7 +595,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "po.delete_file(file_id)"
+    "po.remove_file(file_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Deleting a full product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To delete the product with all its files (main and auxiliary), you can use the method ```delete_product```. **BE CAREFUL! THIS CAN'T BE UNDONE!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.delete_product(product_id)"
    ]
   },
   {
