Update notebook text cells:
  - pz-server.linea.org.br (old) -> pzerver.linea.org.br
  - replace TSM cycle figure for the same with higher resolution
  - update last run date
  - include Luigi's name as contributor

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "# **Photo-z Server** <br> Tutorial Notebook\n",
     "\n",
-    "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Last verified run: **2025-Jan-07**"
+    "Contributors: Luigi Silva <br> \n",
+    "Last verified run: **2025-Jun-17**"
    ]
   },
   {
@@ -57,11 +57,11 @@
     "\n",
     "### About the PZ Server \n",
     "\n",
-    "The Photo-z (PZ) Server is an online service for the LSST Community to host and share lightweight PZ-related data products. The upload and download of data and metadata can be done at the website  [pz-server.linea.org.br](https://pz-server.linea.org.br/)$^{\\dagger}$. There, you will find two pages containing a list of data products each: one for official data products distributed by Rubin Observatory's Data Management department and the other for user-generated data products.\n",
+    "The Photo-z (PZ) Server is an online service for the LSST Community to host and share lightweight PZ-related data products. The upload and download of data and metadata can be done at the website  [pzserver.linea.org.br](https://pzserver-dev.linea.org.br/)$^{\\dagger}$. There, you will find two pages containing a list of data products each: one for official data products distributed by Rubin Observatory's Data Management department and the other for user-generated data products.\n",
     "\n",
     "The PZ Server is developed and delivered by LIneA as part of the in-kind contribution program BRA-LIN to the Rubin Observatory. The service is hosted in the Brazilian IDAC, with access authorized to the LSST Community through [Rubin Science Platform (RSP)](https://data.lsst.cloud/) login credentials. For more information about other contributions from BRA-LIN, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). \n",
     "\n",
-    "$^{\\dagger}$ During the development phase, a test environment is available at [pz-server-dev.linea.org.br](https://pz-server-dev.linea.org.br/)."
+    "$^{\\dagger}$ During the development phase, a test environment is available at [pzserver-dev.linea.org.br](https://pzserver-dev.linea.org.br/)."
    ]
   },
   {
@@ -70,7 +70,7 @@
    "source": [
     "### How to upload a data product on the PZ Server website\n",
     "\n",
-    "To upload a data product, click the button **NEW PRODUCT** on the top left of the [User-generated Data Products page](https://pz-server-dev.linea.org.br/user_products) \n",
+    "To upload a data product, click the button **NEW PRODUCT** on the top right of the [User-generated Data Products page](https://pzserver-dev.linea.org.br/user_products) \n",
     "\n",
     "\n",
     "<center>\n",
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "! pip install pzserver==0.2.7"
+    "! pip install pzserver"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A class `PzServer` object connects with the PZ Server back-end. To get authorization to define an instance of `PzServer`, users must provide an API Token generated in the menu at the top right corner of the [PZ Server website](https://pz-server.linea.org.br/). "
+    "A class `PzServer` object connects with the PZ Server back-end. To get authorization to define an instance of `PzServer`, users must provide an API Token generated in the menu at the top right corner of the [PZ Server website](https://pzserver.linea.org.br/). "
    ]
   },
   {
@@ -216,7 +216,7 @@
    "source": [
     "#with open('token.txt', 'r') as file:\n",
     "#    token = file.read()\n",
-    "#pz_server = PzServer(token=token, host='pz-dev') # 'pz-dev' is the temporary host during the test phase, then it will be just 'pz'  "
+    "#pz_server = PzServer(token=token, host='pz-dev') # 'pz-dev' is the temporary host during the test phase, then it will be just 'pz' (default)  "
    ]
   },
   {
@@ -684,15 +684,15 @@
     "\n",
     "All data products uploaded to the PZ Server are immediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or Python library. One way to share a data product is by providing the product's URL, which leads to the product's download page. The URL is composed by the PZ Server website address + **/products/** + **internal_name**:\n",
     "\n",
-    "https://pz-server.linea.org.br/product/ + **id**\n",
+    "https://pzserver.linea.org.br/product/ + **id**\n",
     "\n",
     "or \n",
     "\n",
-    "https://pz-server.linea.org.br/product/ + **internal_name** \n",
+    "https://pzserver.linea.org.br/product/ + **internal_name** \n",
     "\n",
     "<font color=green> WARNING: if still in the development phase, the URL works only with the **complete internal name**: </font> \n",
     "\n",
-    "https://pz-server<font color=red>-dev</font>.linea.org.br/product/ + **internal_name**\n",
+    "https://pzserver<font color=red>-dev</font>.linea.org.br/product/ + **internal_name**\n",
     "\n",
     "\n",
     "For example, for the data just uploaded above:"
@@ -705,7 +705,7 @@
    "outputs": [],
    "source": [
     "internal_name = pz_server.get_product_metadata(product_id)['internal_name']\n",
-    "url = f'https://pz-server-dev.linea.org.br/product/{internal_name}'\n",
+    "url = f'https://pzserver-dev.linea.org.br/product/{internal_name}'\n",
     "url"
    ]
   },
@@ -1083,8 +1083,7 @@
     "\n",
     "In addition to PZ-related data hosting and curation services, PZ Server also provides tools to help users prepare training data for PZ algorithms. The pipeline *Training Set Maker* uses the data partitioning method [HATS](https://hats.readthedocs.io/en/stable/) and the Python framework [LSDB](https://docs.lsdb.io/en/stable/) (both developed by [LINCC](https://lsstdiscoveryalliance.org/programs/lincc/)) as cross-matching back-end engine, coupled with a user interface on the PZ Server website plugged to the IDAC-Brazil's high-performance computing infrastructure. With *Training Set Maker*, users can create training sets by matching objects from one given spec-z catalog available in the server with objects from an LSST Object catalog. In a previous step, the spec-z catalog might have been prepared as a combination of spectroscopic redshift measurements from different sources grouped into a single catalog with the pipeline *Combine Spec-z Catalogs*. \n",
     "\n",
-    "<img src='./images/TSMcycle.png'/>\n",
-    "\n",
+    "<img src=\"./images/tsm.png\" width=\"600\" style=\"display: block; margin: auto;\" />\n",
     "\n",
     "Both pipelines are executed as asynchronous processes triggered from the PZ Server website or directly from Python scripts using the `pzserver` library, and the outputs are automatically registered as new data products. See below for an example of how to use them.     "
    ]
@@ -1647,9 +1646,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "test"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1661,7 +1660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.10"
   },
   "nbsphinx": {
    "execute": "never"
